<resources>
    <string name="app_name">Ceylon Botanica</string>
    <string name="onboarstext1">Welcome to Ceylon Botanica</string>
    <string name="onboardscteentext2">Step into a world of ancient healing. Discover handpicked herbs, spices, and wellness treasures nurtures by the lush lands of Sri Lanka.</string>
    <string name="skipbtn">Skip</string>
    <string name="onboarstext3">100% Pure. Always Natural.</string>
    <string name="onboarstext4">Every leaf, stick, and blend we offer is 100% natural, ethically sourced, and crafted to restore your body, mind, and soul.</string>
    <string name="backbtn">Back</string>
    <string name="onboarstext5">Tap. Shop. Heal.</string>
    <string name="onboarstext6">From soothing cinnamon tea to herbal smokes, explore a curated range of natural products delivered fresh to your doorstep.</string>
    <string name="getstrtbtn">Get Start</string>
    <string name="sign_in_text1">Sign In</string>
    <string name="sigin_in_text2">We missed you. Let’s get you back in!</string>
    <string name="email">Email</string>
    <string name="sign_in_hint1">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="sign_in_hint2">Enter Your Password</string>
    <string name="check_box">Stay Signed In</string>
    <string name="forgorpwbtn">Forgot Password?</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="google1">Sign in with Google</string>
    <string name="apple1">Sign in with Apple</string>
    <string name="facebook1">Sign in with Facebook</string>
    <string name="don_t_have_an_account">Don’t have an account? </string>
    <string name="sign_up_btn_loginscreen">Sign Up</string>
    <string name="signup_text1">Create an Account</string>
    <string name="signup_text2">Create an account to explore our full range of natural products.</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="email_signup">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="address_signup">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="password_signup">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="agree_with">Agree with</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_up_with">Or Sign Up With</string>
    <string name="facebook2">Facebook</string>
    <string name="apple2">Apple</string>
    <string name="google2">Google</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="sign_in">Sign In</string>
    <string name="verify_code">Verify Code</string>
    <string name="we_ve_sent_a_6_digit_code_to_your_email">We’ve sent a 6-digit code to your email</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_a_code">Didn’t Receive a Code?</string>
    <string name="resend_code">Resend Code</string>
    <string name="success">Success!</string>
    <string name="congratulations_you_have_been_successfully_authenticated">Congratulations! You have been successfully authenticated</string>
    <string name="continuebtn">Continue</string>
    <string name="deliver_to">Deliver to</string>
    <string name="_67_morris_street_san_antonio">67 Morris Street, San Antonio</string>
    <string name="search_your_favorite_product">Search your favorite product</string>
    <string name="herbal_tea">Herbal Tea</string>
    <string name="flavors">Flavors</string>
    <string name="spices">Spices</string>
    <string name="leaves">Leaves</string>
    <string name="seeds">Seeds</string>
    <string name="fruits">Fruits</string>
    <string name="popular">Popular</string>
    <string name="ceylon_cinnamon">Ceylon Cinnamon</string>
    <string name="_4_5">4.5</string>
    <string name="_35">$35</string>
    <string name="_20">$20</string>
    <string name="turmeric_powder">Turmeric Powder</string>
    <string name="_4_8">4.8</string>
    <string name="_25">$25</string>
    <string name="_18">$18</string>
    <string name="blue_lotus_tea">Blue Lotus Tea</string>
    <string name="_4_6">4.6</string>
    <string name="_28">$28</string>
    <string name="_22">$22</string>
    <string name="vanilla_powder">Vanilla Powder</string>
    <string name="_4_7">4.7</string>
    <string name="_29">$29</string>
    <string name="_24">$24</string>
    <string name="hibiscus_tea">Hibiscus Tea</string>
    <string name="_4_4">4.4</string>
    <string name="_21">$21</string>
    <string name="_17">$17</string>
    <string name="das_herbal_tea">Das Herbal Tea</string>
    <string name="_4_3">4.3</string>
    <string name="_19">$19</string>
    <string name="_15">$15</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="deliver_to_herbal">Deliver to</string>
    <string name="_67_morris_street_san_antonio_herbal">67 Morris Street, San Antonio</string>
    <string name="herbal_tea_herbal">Herbal Tea</string>
    <string name="flavors_herbal">Flavors</string>
    <string name="spices_herbal">Spices</string>
    <string name="leaves_herbal">Leaves</string>
</resources>