<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".VerificationScreen">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/verify_code"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="32dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/we_ve_sent_a_6_digit_code_to_your_email"
        android:textColor="@color/accent"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/otpRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp">

        <EditText
            android:id="@+id/etOtp1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/otp_box"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:layout_marginEnd="14dp"/>

        <EditText
            android:id="@+id/etOtp2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/otp_box"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:layout_marginEnd="14dp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etOtp3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/otp_box"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:layout_marginEnd="14dp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etOtp4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/otp_box"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:layout_marginEnd="14dp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etOtp5"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/otp_box"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:importantForAutofill="no"
            android:layout_marginEnd="14dp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etOtp6"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/otp_box"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCntinue"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/btn_primary"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/otpRow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvNoCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/didn_t_receive_a_code"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCntinue" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/resend_code"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoCode" />


</androidx.constraintlayout.widget.ConstraintLayout>
