<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/contentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Fixed Bottom Nav Bar -->
    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:background="@color/primary"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:paddingTop="6dp"
        android:paddingBottom="8dp"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Home -->
        <LinearLayout
            android:id="@+id/tabHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivHome"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:srcCompat="@drawable/nav_home_selector" />

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/home"
                android:textColor="@color/divider"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Wishlist -->
        <LinearLayout
            android:id="@+id/tabWishlist"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivWishlist"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:srcCompat="@drawable/nav_wishlist_selector" />

            <TextView
                android:id="@+id/tvWishlist"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/wishlist"
                android:textAlignment="center"
                android:textColor="@color/divider"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Cart -->
        <LinearLayout
            android:id="@+id/tabCart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCart"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:srcCompat="@drawable/nav_cart_selector" />

            <TextView
                android:id="@+id/tvCart"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/cart"
                android:textAlignment="center"
                android:textColor="@color/divider"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Profile -->
        <LinearLayout
            android:id="@+id/tabProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:srcCompat="@drawable/nav_profile_selector" />

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/divider"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
